fixed icons overflow on mobile and removed lines

--- a/css/style.css
+++ b/css/style.css
@@ -19,9 +19,9 @@ body{font-family: 'museo-sans', Helvetica, serif;color:#fff;padding-top:12%;text
 .description a{color:#fff;}
 .description a:hover{color:#404d5b;}
 
-.social-btns{margin: 0 auto;display: block;float: none;height: 50px;width: 40%;}
+.social-btns{margin: 0 auto;display: block;float: none;height: 50px;width: 370px;}
 .social-btns img{margin: 0 auto;display: block;}
-.social-btns a{position:relative;background: rgba(0,0,0,.2);width: 50px;height:50px;float:left;border-radius: 50%;background-size: 200px;margin-right: 8%;}
+.social-btns a{position:relative;background: rgba(0,0,0,.2);width: 50px;height:50px;float:left;border-radius: 50%;margin-right: 8%;}
 .social-btns a:nth-child(1) img{margin-top: 13px;}
 .social-btns a:nth-child(2) img{margin-top: 16px;}
 .social-btns a:nth-child(3) img{margin-top: 15px;}
@@ -71,10 +71,37 @@ body{font-family: 'museo-sans', Helvetica, serif;color:#fff;padding-top:12%;text
 
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen and (min-width : 320px) and (max-width : 480px) {
-	.headline{font-size: 6.2vw;width: 91%;}
+	.headline{font-size: 11vw;width: 91%;}
+	.headline-line{display:none;}
 	.description{font-size: 5.2vw;width: 90%;}
-	.social-btns{width: 90%;}
-	.social-btns a{margin-right: 5%;}
+	.social-btns{width: 240px;}
+	.social-btns a{margin-right: 4%;width: 40px;height: 40px;}
+	.social-btns a:nth-child(1){}
+	.social-btns a:nth-child(2){}
+	.social-btns a:nth-child(3){}
+	.social-btns a:nth-child(4){}
+	.social-btns a:nth-child(5){}
+	.social-btns a:nth-child(1) img{
+    width: 25px;
+    height: auto;
+    margin-top: 9px;
+}
+	.social-btns a:nth-child(2) img{
+    width: 20px; height: auto; 
+    margin-top: 12px;
+}
+	.social-btns a:nth-child(3) img{
+    width: 20px; height: auto; 
+    margin-top: 13px;
+}
+	.social-btns a:nth-child(4) img{
+    width: 18px; height: auto; 
+    margin-top: 11px;
+}
+	.social-btns a:nth-child(5) img{
+    width: 18px; height: auto; 
+    margin-top: 12px;
+}
 }
 
 /* iPads (portrait and landscape) ----------- */
@@ -89,7 +116,7 @@ body{font-family: 'museo-sans', Helvetica, serif;color:#fff;padding-top:12%;text
 @media only screen and (min-width : 768px) and (max-width : 1024px) {
 	.headline{}
 	.description{font-size: 2.2vw;width: 71%;}
-	.social-btns{width: 55%;}
+	.social-btns{width: 55%;width: 370px;}
 	.social-btns a{}
 }
 
